--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_hooks: ^0.21.2
   hooks_riverpod: ^2.6.1
   uuid: ^4.5.1
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
