--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   hooks_riverpod: ^2.6.1
   uuid: ^4.5.1
   flutter_dotenv: ^5.2.1
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
